--- a/css/shared.css
+++ b/css/shared.css
@@ -156,8 +156,6 @@ html {
 body {
   height: auto;
   min-height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
